{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 30,
  "lineage": "445eeece-03bd-2de5-2bc2-eaac4454cb3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b64820bc2306898f",
            "domain": "vpc",
            "id": "eipalloc-0b64820bc2306898f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-233-167-220.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.167.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:internet-gateway/igw-0d9b94daaa4581a4d",
            "id": "igw-0d9b94daaa4581a4d",
            "owner_id": "907372444199",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b64820bc2306898f",
            "association_id": "eipassoc-0c5f746e236ff21ad",
            "connectivity_type": "public",
            "id": "nat-019e180eef538a026",
            "network_interface_id": "eni-0ec9d89eb9fa1981f",
            "private_ip": "11.0.3.139",
            "public_ip": "44.233.167.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a34d6c7f561208d",
            "tags": {
              "Name": "NAT GW"
            },
            "tags_all": {
              "Name": "NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.Elastic_ip",
            "aws_internet_gateway.IGW",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:network-acl/acl-0fa5d647a0bb18b8c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0fa5d647a0bb18b8c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "11.0.0.0/16",
                "from_port": 1,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 100,
                "to_port": 100
              }
            ],
            "owner_id": "907372444199",
            "subnet_ids": [],
            "tags": {
              "name": "Private NACL"
            },
            "tags_all": {
              "name": "Private NACL"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:network-acl/acl-0647dadde5bc559ab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0647dadde5bc559ab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 100,
                "to_port": 100
              }
            ],
            "owner_id": "907372444199",
            "subnet_ids": [],
            "tags": {
              "name": "pubic NACL"
            },
            "tags_all": {
              "name": "pubic NACL"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.pub_subnet_web",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pri_sub_nacl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-050c1d9cdb2dd52dd",
            "network_acl_id": "acl-0fa5d647a0bb18b8c",
            "subnet_id": "subnet-05a34d6c7f561208d"
          },
          "dependencies": [
            "aws_network_acl.private_NACL",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-041c355b88a4b2db7",
            "network_acl_id": "acl-0fa5d647a0bb18b8c",
            "subnet_id": "subnet-0ad8aeb6f4c592c69"
          },
          "dependencies": [
            "aws_network_acl.private_NACL",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub_sub_nacl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-034cef33daa1c6d7c",
            "network_acl_id": "acl-0647dadde5bc559ab",
            "subnet_id": "subnet-0b057541c2251c44b"
          },
          "dependencies": [
            "aws_network_acl.public_NACL",
            "aws_subnet.pub_subnet_web",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0e44e3f5d6e78773e",
            "network_acl_id": "acl-0647dadde5bc559ab",
            "subnet_id": "subnet-0dfd71666e1c918b2"
          },
          "dependencies": [
            "aws_network_acl.public_NACL",
            "aws_subnet.pub_subnet_web",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Private_route_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2083d2f919c95b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019e180eef538a026",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2083d2f919c95b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Elastic_ip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.Private_RT_DB",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pri_route_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05652d2d3b4c410661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019e180eef538a026",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05652d2d3b4c41066",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Elastic_ip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.Private_RT_app",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_RT_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d9b94daaa4581a4d",
            "id": "r-rtb-07d5e0cb54c9993831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d5e0cb54c999383",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_RT",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:route-table/rtb-0d2083d2f919c95b2",
            "id": "rtb-0d2083d2f919c95b2",
            "owner_id": "907372444199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "Private DB route table"
            },
            "tags_all": {
              "name": "Private DB route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:route-table/rtb-05652d2d3b4c41066",
            "id": "rtb-05652d2d3b4c41066",
            "owner_id": "907372444199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "Private app route table"
            },
            "tags_all": {
              "name": "Private app route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:route-table/rtb-07d5e0cb54c999383",
            "id": "rtb-07d5e0cb54c999383",
            "owner_id": "907372444199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "Public route table"
            },
            "tags_all": {
              "name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT_DB_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd8c533bce486c98",
            "route_table_id": "rtb-0d2083d2f919c95b2",
            "subnet_id": "subnet-0b1445eb9af0b4698"
          },
          "dependencies": [
            "aws_route_table.Private_RT_DB",
            "aws_subnet.Private_sub_DB",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad990de3da5cc8ff",
            "route_table_id": "rtb-0d2083d2f919c95b2",
            "subnet_id": "subnet-0061ed201b8d14ae2"
          },
          "dependencies": [
            "aws_route_table.Private_RT_DB",
            "aws_subnet.Private_sub_DB",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prt_sub_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b47b7b12209ae31",
            "route_table_id": "rtb-05652d2d3b4c41066",
            "subnet_id": "subnet-05a34d6c7f561208d"
          },
          "dependencies": [
            "aws_eip.Elastic_ip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT_GW",
            "aws_route.pri_route_app",
            "aws_route_table.Private_RT_app",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed0f995058e15065",
            "route_table_id": "rtb-05652d2d3b4c41066",
            "subnet_id": "subnet-0ad8aeb6f4c592c69"
          },
          "dependencies": [
            "aws_eip.Elastic_ip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT_GW",
            "aws_route.pri_route_app",
            "aws_route_table.Private_RT_app",
            "aws_subnet.Pri_subnet_app",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0006a2c8faec241ce",
            "route_table_id": "rtb-07d5e0cb54c999383",
            "subnet_id": "subnet-0b057541c2251c44b"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route.pub_RT_web",
            "aws_route_table.public_RT",
            "aws_subnet.pub_subnet_web",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004ce7ecceca30832",
            "route_table_id": "rtb-07d5e0cb54c999383",
            "subnet_id": "subnet-0dfd71666e1c918b2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route.pub_RT_web",
            "aws_route_table.public_RT",
            "aws_subnet.pub_subnet_web",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_pub_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:security-group/sg-033ae6e2960b635d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033ae6e2960b635d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": " public SG",
            "name_prefix": "",
            "owner_id": "907372444199",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "public sg"
            },
            "tags_all": {
              "name": "public sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pri_subnet_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:subnet/subnet-05a34d6c7f561208d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a34d6c7f561208d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907372444199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet app 1"
            },
            "tags_all": {
              "Name": "private subnet app 1"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:subnet/subnet-0ad8aeb6f4c592c69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad8aeb6f4c592c69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907372444199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet app 2"
            },
            "tags_all": {
              "Name": "private subnet app 2"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_sub_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:subnet/subnet-0b1445eb9af0b4698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1445eb9af0b4698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907372444199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet db 1"
            },
            "tags_all": {
              "Name": "private subnet db 1"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:subnet/subnet-0061ed201b8d14ae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0061ed201b8d14ae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907372444199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet db 2"
            },
            "tags_all": {
              "Name": "private subnet db 2"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:subnet/subnet-0b057541c2251c44b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b057541c2251c44b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907372444199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet web 1"
            },
            "tags_all": {
              "Name": "public subnet web 1"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:subnet/subnet-0dfd71666e1c918b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd71666e1c918b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907372444199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet web 2"
            },
            "tags_all": {
              "Name": "public subnet web 2"
            },
            "vpc_id": "vpc-0124430f17b33fee0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:907372444199:vpc/vpc-0124430f17b33fee0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0afffce9a2b582818",
            "default_route_table_id": "rtb-04a6bf50449e08809",
            "default_security_group_id": "sg-0380f126d51f0ec46",
            "dhcp_options_id": "dopt-a80378d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0124430f17b33fee0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a6bf50449e08809",
            "owner_id": "907372444199",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}